# moogles_intuition

./: .gitignore  README.md  TODO  build.sh  pyproject.toml
moogle_intuition/: __init__.py  _enums.py  _types.py  errors.py  get-values.py  item-craft-usage.py  modules.py  modules2.py
moogle_intuition/ff14angler/: __init__.py  _types.py
moogle_intuition/garland_tools/: __init__.py  _enums.py  _types.py
moogle_intuition/universalis/: __init__.py  _enums.py  _types.py
numpy_templates/: numpy_overwrite.mustache
