
[project]
name = "moogle_intuition"
dynamic = ["version"]
authors = [
    { name = "k8thekat", email = "Cadwalladerkatelynn@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
description = "A package to utilitize the data from XIVDataMining and TeamCraft, while integrating GarlandTools API and Universalis API Responses."
requires-python = ">=3.12.0"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["moogle_intuition", "ffxiv", "datamining", "universalis", "garland tools"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "garlandtools>=2.0.1",
    "thefuzz>=0.22.1",
    "universalis",
]
[project.urls]
GitHub = "https://github.com/k8thekat/moogles_intuition"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "C901", # Too complex functions.
    "D401", # Ignore "Imperative Mood" statement for docstrings.
    "ERA001", #Ignore commented out code.
    "FIX002", # Ignore TODO's telling you to "fix them".
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "PLR",
    "RUF001",
    "RUF002", # The character U+2013 "–" could be confused with the ASCII character U+002d "-", which is more common in source code.
    "RUF003", # The character U+2013 "–" could be confused with the ASCII character U+002d "-", which is more common in source code, this is for "COMMENTS"
    "RUF009",
    "RUF052", # for filtering "local dummy variable is accessed" eg. - vars using `_`
    "SIM105",
    "SLF001", # private function/attribute usage outside of the class it was defined.
    "TD003", # Ignore TODO's not having a link/url to an issue.
    "UP007",
    "UP034",
    "UP038",
    "UP045", # Type var `Optional[X]` vs `X | None`
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = ["logs/**", "**/.venv/**", "**/.vscode-server/", "/usr/*"]
include = ["moogle_intuition"]
useLibraryCodeForTypes = true
reportIncompatibleMethodOverride = false
reportPrivateUsage = false # I do this because of using lot's of functions for data handling inside of `Moogle`.

[tool.setuptools]
packages = ["moogle_intuition"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "moogle_intuition.__version__" }

[tool.uv.sources]
universalis = { git = "https://github.com/k8thekat/UniversalisAPI_wrapper" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
